[package]
name = "esp-c3-wifi"
version = "0.1.0"
authors = ["Schubert Anselme <schubert@anselm.es>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-graphics = "0.7.1"
esp-idf-hal = "0.40.1"
esp-idf-svc = "0.45.0"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
lcd1602-rs = "0.1.0"
ssd1306 = "0.7.1"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"
